--- a/line-experiment-001/index.html
+++ b/line-experiment-001/index.html
@@ -1,7 +1,32 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-    <script src="sketch.js"></script>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+
+        main {
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            min-height:100vh;
+            height:100%;
+            background-color:#000000;
+        }
+    </style>
+    <script>
+        function setup() {
+            createCanvas(600, 600);
+            background(0);
+        }
+        
+        function draw() {
+            stroke(random(0,255),80,200,random(0,255));
+            line(random(0, width),random(0, width),random(0, width),random(0, width))
+        }
+    </script>
   </head>
   <body>
     <main>
